k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  type: LoadBalancer

  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
