k8s/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: backend-http-redirect
  namespace: default

spec:
  parentRefs:
    - name: backend-gateway
      sectionName: http

  hostnames:
    - deepak-aks-api-2509.centralindia.cloudapp.azure.com

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
